<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service_hint">Cost of Service</string>
    <string name="service_ask">How was the service?</string>
    <string name="calculate_button">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="total_cost">Total cost: %s</string>
    <string name="total_amount">Total Amount: %s</string>
    <string name="okay_service">Okay (15%) </string>
    <string name="good_service">Good (18%) 👍 </string>
    <string name="amazing_service">Amazing (20%) 🌟 </string>
    <string name="label" />
</resources>