<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="160dp"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:id="@+id/cost_of_service"
        android:hint="@string/cost_of_service_hint"
        app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cost_of_service_edit_text"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_store"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_of_service"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.TipTime.TextView"
        android:layout_margin="16dp"
        android:text="@string/service_ask"
        app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_cost_of_service"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/service_question"
        app:layout_constraintBottom_toBottomOf="@id/service_question"/>

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/option_20_percent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/service_question"
        app:layout_constraintTop_toBottomOf="@id/service_question">

        <RadioButton
            android:id="@+id/option_20_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.TipTime.CompoundButton.RadioButton"
            android:text="@string/amazing_service" />

        <RadioButton
            android:id="@+id/option_18_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.TipTime.CompoundButton.RadioButton"
            android:text="@string/good_service" />

        <RadioButton
            android:id="@+id/option_15_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.TipTime.CompoundButton.RadioButton"
            android:text="@string/okay_service" />
    </RadioGroup>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_round_up"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_up_switch"
        app:layout_constraintBottom_toBottomOf="@id/round_up_switch" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checked="true"
        style="@style/Widget.TipTime.CompoundButton.Switch"
        android:text="Round up tip?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_round_up"
        app:layout_constraintTop_toBottomOf="@id/tip_options" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/round_up_switch"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Tip Amount: $10"
        style="@style/Widget.TipTime.TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button" />
    <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_cost"
        tools:text="Total Cost: $30"
        app:layout_constraintTop_toBottomOf="@id/tip_result"
        app:layout_constraintEnd_toEndOf="parent" />
    <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_amount"
        tools:text="Total Amount: $50"
        app:layout_constraintTop_toBottomOf="@id/total_cost"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>